Attempt to prevent overscroll on iphone

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   width: 100%;
   font-family: Arial, Helvetica, sans-serif;
   background-color: #1a1a1a;
+  touch-action: none;
 }
 
 html {
